2002-09-20  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/bsd/bsd4.4/isatty.c: New file.

	* sysdeps/unix/bsd/isatty.c (__isatty): Don't save and restore errno.
	* sysdeps/unix/bsd/ptsname.c (__ptsname_r): Return errno value from
	isatty unmodified.  Reported by Bruno Haible <bruno@clisp.org>.

2002-09-20  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/bits/setjmp.h [__WORDSIZE]: Add 64-bit jmpbuf.
	* sysdeps/powerpc/bits/wordsize.h: New file.
	* sysdeps/powerpc/fpu/bits/mathinline.h (lrint, lrintf): Change long
	array to int array for 32-/64-bit compatibility.

2002-09-20  Roland McGrath  <roland@redhat.com>

	* login/programs/utmpdump.c: Don't include <error.h>, <errno.h>.

	* sysdeps/generic/utimes.c (__utimes): Don't check TVP for null.
	Reported by Bruno Haible <bruno@clisp.org>.

	* sysdeps/generic/ifreq.h (__ifreq): Compute termination condition
	before doubling RQ_LEN.
	* sysdeps/unix/sysv/linux/ifreq.h (__ifreq): Likewise.
	Reported by Bruno Haible <bruno@clisp.org>.

2002-09-18  Bruno Haible  <bruno@clisp.org>

	* login/logout.c (logout): Don't assume ut_time has the same size as
	a time_t.
	* login/logwtmp.c (logwtmp): Likewise.

	* sysdeps/pthread/configure: New file, moved here from
	linuxthreads/sysdeps/unix/sysv/linux/configure.

2002-09-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/_exit.c: Include <errno.h>.
	(_exit): Don't use ABORT_INSTRUCTION if it is not defined.
	Reported by Glen Nakamura <glen@imodulo.com>.

2002-09-19  Neal H. Walfield  <neal@cs.uml.edu>

	* sysdeps/mach/hurd/fork.c (__fork): Do not free the signal
	thread's sigstate data structure if it has been allocated.

2002-09-19  Roland McGrath  <roland@redhat.com>

	* include/libc-symbols.h [HAVE_ASM_SET_DIRECTIVE]
	[! HAVE_ASM_GLOBAL_DOT_NAME] (__hidden_dot_def1): Fix typo'd name.

2002-09-18  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.2.94.

	* sysdeps/powerpc/fpu/Dist: Move fprrest.S and fprsave.S to...